# yt-playlist-download

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  main.py  pyproject.toml
core/: entities.py  interfaces.py  usecases.py
infrastructure/: pytube_youtube_api.py
tests/: test_entities.py  test_filename_sanitizer.py  test_pytube_youtube_api.py  test_usecases.py
utils/: filename_sanitizer.py
