[project]
name = "yt-playlist-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pydantic>=2.9.2",
    "pytubefix>=8.4.1",
]


[flake8]
max-line-length = 88
extend-ignore = "E203, W503"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
